test/should-fail/变量数组-1.j
function test takes nothing returns nothing
    local integer i
    set i[1] = 1
endfunction